unpackaged/main/default/objects/PricebookEntry/fields/Entrada_Lista_Precios__c.field-meta.xml
<CustomField>
    <fullName>Entrada_Lista_Precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrada Lista Precios</label>
    <referenceTo>Entrada_Lista_Precios__c</referenceTo>
    <relationshipLabel>Entradas de listas de precios</relationshipLabel>
    <relationshipName>Entradas_de_listas_de_precios</relationshipName>
    <type>Lookup</type>
</CustomField>