unpackaged/main/default/objects/PricebookEntry/fields/Fecha_Vigencia_Fraccinamiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vigencia_Fraccinamiento__c</fullName>
    <formula>DATEVALUE(MID(SUBSTITUTE(Product2.Fechas__c,&#39;;&#39;,&#39;&#39;), 0, 9))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Vigencia Fraccionamiento</label>
    <type>Date</type>
</CustomField>