unpackaged/main/default/objects/PricebookEntry/fields/Fraccionamiento_Lista__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Lista__c</fullName>
    <formula>Pricebook2.Fraccionamiento__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento Lista</label>
    <type>Text</type>
</CustomField>