unpackaged/main/default/objects/PricebookEntry/fields/Fraccionamientos_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamientos_Producto__c</fullName>
    <formula>Product2.Fraccionamientos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamientos Producto</label>
    <type>Text</type>
</CustomField>