unpackaged/main/default/objects/PricebookEntry/fields/Fraccionamientos_Vencidos_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamientos_Vencidos_Producto__c</fullName>
    <formula>Product2.Fraccionamientos_Vencidos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamientos Vencidos Producto</label>
    <type>Text</type>
</CustomField>