unpackaged/main/default/objects/PricebookEntry/fields/Plaza_Lista__c.field-meta.xml
<CustomField>
    <fullName>Plaza_Lista__c</fullName>
    <formula>Product2.Plazas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza Lista</label>
    <type>Text</type>
</CustomField>