unpackaged/main/default/objects/PricebookEntry/fields/Plaza_Producto__c.field-meta.xml
<CustomField>
    <fullName>Plaza_Producto__c</fullName>
    <formula>Pricebook2.Fraccionamiento__r.Estado_fracc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza Producto</label>
    <type>Text</type>
</CustomField>