unpackaged/main/default/objects/PricebookEntry/fields/Plaza_S_F_Lista__c.field-meta.xml
<CustomField>
    <fullName>Plaza_S_F_Lista__c</fullName>
    <formula>Product2.Plazas_Sin_Fracc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza S F  Lista</label>
    <type>Text</type>
</CustomField>