unpackaged/main/default/objects/PricebookEntry/fields/Tipo_Lista_Validacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Lista_Validacion__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Lista Validación</label>
    <type>Text</type>
</CustomField>