unpackaged/main/default/objects/PricebookEntry/fields/Tipo_Producto_Validacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Producto_Validacion__c</fullName>
    <formula>Product2.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Producto Validación</label>
    <type>Text</type>
</CustomField>