unpackaged/main/default/objects/PricebookEntry/fields/Total_M2_Excedentes__c.field-meta.xml
<CustomField>
    <fullName>Total_M2_Excedentes__c</fullName>
    <label>Total M2 Excedentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>