unpackaged/main/default/objects/PricebookEntry/validationRules/No_agregar_productos_a_lista_de_prom_pre.validationRule-meta.xml
<ValidationRule>
    <fullName>No_agregar_productos_a_lista_de_prom_pre</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
IF(CONTAINS(Tipo_Lista_Validacion__c , &#39;PROM $&#39;), true, false),
IF(CONTAINS(Tipo_Lista_Validacion__c , &#39;BON &#39;), true, false),
IF(CONTAINS(Tipo_Lista_Validacion__c , &#39;FIN &#39;), true, false)
)</errorConditionFormula>
    <errorMessage>No se pueden añadir productos a esta lista de precios</errorMessage>
</ValidationRule>