unpackaged/main/default/objects/PricebookEntry/validationRules/Restriccion_por_plaza.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriccion_por_plaza</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Tipo_Producto_Validacion__c != &#39;Productos Genéricos&#39;,
    OR(
        (!CONTAINS(Plaza_Lista__c , Plaza_Producto__c))
    )
)</errorConditionFormula>
    <errorMessage>Validar que el producto corresponda a la plaza asignada al fraccionamiento</errorMessage>
</ValidationRule>