unpackaged/main/default/objects/PricebookEntry/validationRules/Restriccion_productos_inactivos.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriccion_productos_inactivos</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Product2.IsActive, false, true)</errorConditionFormula>
    <errorMessage>No se pueden añadir productos inactivos a una lista de precios</errorMessage>
</ValidationRule>