unpackaged/main/default/objects/PricebookEntry/validationRules/restriccion_vigencia.validationRule-meta.xml
<ValidationRule>
    <fullName>restriccion_vigencia</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Fecha_Vigencia_Fraccinamiento__c &lt; TODAY(), true, false)</errorConditionFormula>
    <errorMessage>Validar que la fecha del fraccionamiento relacionado sea vigente</errorMessage>
</ValidationRule>